# crypto-math

./: .gitignore  BUILD.bazel  Cargo.toml  KBUILD  README.md  WORKSPACE  crate_rust_setup.sh  go.mod  main.go
algebra-math/: Cargo.toml
cmc/: Cargo.toml
m/: Makefile
m/algebra/: Makefile  ext_euclidean_algo.go  ext_euclidean_algo_test.go
m/cmd/: Makefile  gcd.go  inverse_mod_m.go
m/cmd/err/: Makefile  common.go  inv_mod_m.go
scripts/golang/: _build_object.mk  clean.mk
